--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,4 +16,6 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.1
 
-flutter:
+screenshots:
+  - description: CalendarDatePicker2 customisation demo
+    path: example/screenshots/custom_range_picker_demo.png
