--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: calendar_date_picker2
 description: A lightweight and customizable calendar picker based on Flutter CalendarDatePicker, with support for single date picker, range picker and multi picker.
-version: 0.4.4
+version: 0.4.5
 homepage: https://github.com/theideasaler/calendar_date_picker2
 
 environment:
@@ -19,3 +19,5 @@ dev_dependencies:
 screenshots:
   - description: CalendarDatePicker2 customisation demo
     path: example/screenshots/custom_range_picker_demo.png
+  - description: CalendarDatePicker2 customisation demo
+    path: example/screenshots/custom_range_picker_demo_2.png
