--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  calendar_date_picker2:
+  calendar_date_picker2_fixed:
     path: ../
 
 dev_dependencies:
